force-app/main/default/objects/FinServ__ReciprocalRole__c/FinServ__ReciprocalRole__c.object-meta.xml
<CustomObject>
    <description
  >Represents the other entity’s corresponding role in a one-to-one relationship between entities.</description>
    <label>Reciprocal Role</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Role</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reciprocal Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>