force-app/main/default/objects/FinServ__ReciprocalRole__c/fields/FinServ__CreateInverseRole__c.field-meta.xml
<CustomField>
    <fullName>FinServ__CreateInverseRole__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >When checked, a new inverse role is created for the role.</description>
    <inlineHelpText
  >If checked, a corresponding inverse role is automatically created.</inlineHelpText>
    <label>Create Inverse Role</label>
    <type>Checkbox</type>
</CustomField>