force-app/main/default/objects/FinServ__ReciprocalRole__c/fields/FinServ__InverseRole__c.field-meta.xml
<CustomField>
    <fullName>FinServ__InverseRole__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inverse Role</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>