force-app/main/default/objects/FinServ__ReciprocalRole__c/fields/FinServ__RelationshipType__c.field-meta.xml
<CustomField>
    <fullName>FinServ__RelationshipType__c</fullName>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Contact Contact Relation</fullName>
            </value>
            <value>
                <fullName>Account Account Relation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>