force-app/main/default/objects/FinServ__ReciprocalRole__c/recordTypes/FinServ__ContactRole.recordType-meta.xml
<RecordType>
    <fullName>FinServ__ContactRole</fullName>
    <active>true</active>
    <description
  >Roles associated with Contact-Contact Relationships</description>
    <label>Contact Role</label>
</RecordType>