force-app/main/default/objects/FinServ__ReciprocalRole__c/validationRules/FinServ__ProhibitUpdates.validationRule-meta.xml
<ValidationRule>
    <fullName>FinServ__ProhibitUpdates</fullName>
    <active>true</active>
    <description
  >Enforces that updates to reciprocal roles are prohibited</description>
    <errorConditionFormula>ISCHANGED( FinServ__CreateInverseRole__c) ||
            ISCHANGED(Name) || ISCHANGED( FinServ__InverseRole__c ) || ISCHANGED(RecordTypeId)</errorConditionFormula>
    <errorMessage>Reciprocal Role cannot be modified</errorMessage>
</ValidationRule>